--- a/your_code/main.ipynb
+++ b/your_code/main.ipynb
@@ -12,14 +12,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Chi2ContingencyResult(statistic=10.712198008709638, pvalue=0.004719280137040844, dof=2, expected_freq=array([[24.08421053, 19.91578947],\n",
+       "       [19.70526316, 16.29473684],\n",
+       "       [ 8.21052632,  6.78947368]]))"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# your answer here\n",
+    "import scipy.stats as st\n",
+    "import numpy as np\n",
+    "\n",
+    "sugar_drinks = np.array([[32, 12], [14, 22], [6, 9]])\n",
+    "st.chi2_contingency(sugar_drinks)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your answer here"
+    "#Since the p-value is less than 0.05, we can say there is relation between physical activity and sugary drinks."
    ]
   },
-
   {
    "cell_type": "markdown",
    "metadata": {},
@@ -37,17 +63,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Power_divergenceResult(statistic=6.491310681109786, pvalue=0.4836889068537311)"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# your answer here\n",
+    "import scipy.stats as st\n",
+    "import numpy as np\n",
+    "\n",
+    "observation = np.array([35, 99, 104, 110, 62, 25, 10, 3])\n",
+    "total = 448\n",
+    "mean_lambda = 2.435\n",
+    "\n",
+    "expected_f = []\n",
+    "for number in range(7):\n",
+    "    prob = st.poisson.pmf(number, mean_lambda)\n",
+    "    expected_f.append(total * prob)\n",
+    "\n",
+    "expected_prob_7_or_more = 1- st.poisson.cdf(6, mean_lambda)\n",
+    "expected_f.append(expected_prob_7_or_more*total)\n",
+    "\n",
+    "expected_f = np.array(expected_f)\n",
+    "\n",
+    "st.chisquare(f_obs = observation, f_exp = expected_f)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your answer here"
+    "# p values is greater than 0.05 so we can't reject the hypothesis of that sample follows poisson distribution"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -61,7 +125,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
